--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,139 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="#" width="86" height="35" alt="Мишка">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav_wrapper">
+          <ul class="main-nav__list upper-list">
+            <li class="upper-list__item">
+              <a href="#">Каталог товаров</a>
+            </li>
+            <li class="upper-list__item">
+              <a href="#">Вязание на заказ</a>
+            </li>
+            <li class="upper-list__item">
+              <a href="#">Поиск по сайту</a>
+            </li>
+            <li class="upper-list__item">
+              <a href="#">Корзина</a>
+            </li>
+          </ul>
+          <ul class="main-nav__list lower-list">
+            <li class="lower-list__item">
+              <a href="#">Новые поступления</a>
+            </li>
+            <li class="lower-list__item">
+              <a href="#">Распродажа</a>
+            </li>
+            <li class="lower-list__item">
+              <a href="#">Бесплатная доставка по России</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+    <main class="page-main">
+      <section class="good-sorts">
+        <h1 class="good-sorts__headline">Милые штуки ручной работы для дома</h1>
+        <ul class="good-sorts__list">
+          <li class="good-sorts__item good-sorts__item--light">
+            <a href="#">Предметы интерьера</a>
+            <div class="good-sorts__item-icon good-sorts__item-icon--interior">
+              <img src="#" width="40" height="62">
+            </div>
+          </li>
+          <li class="good-sorts__item good-sorts__item--dark">
+            <a href="#">Детские игрушки</a>
+            <div class="good-sorts__item-icon good-sorts__item-icon--toys">
+              <img src="#" width="60" height="60">
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="product-week">
+        <h2 class="product-week__subtitle">Вязаные корзинки</h2>
+        <h3 class="product-week__title">Товар недели</h3>
+        <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+        <div class="product-week__spec">
+          <ul class="product-week__spec1">
+            <li>Цвет:</li>
+            <li>«Тиффани»/серый</li>
+          </ul>
+          <ul class="product-week__spec2">
+            <li>Диаметр:</li>
+            <li>25 см</li>
+          </ul>
+          <ul class="product-week__spec3">
+            <li>Высота:</li>
+            <li>15 см</li>
+          </ul>
+          <div class="product-week_img">
+            <img src="#" alt="Вязаные корзинки" width="260" height="315">
+          </div>
+          <span class="product-week__price">Цена: 990 руб</span>
+        </div>
+        <a class="btn" href="#">Заказать</a>
+      </section>
+      <section class="about-us">
+        <h2 class="about-us__title">Коротко о нас:</h2>
+        <ul class="about-us__list">
+          <li class="about-us__item about-us__item--eco">Экологически чистые материалы</li>
+          <li class="about-us__item about-us__item--price">Скандинавский стиль по российской цене</li>
+          <li class="about-us__item about-us__item--like"> Увеличивает лайки на фотографиях</li>
+          <li class="about-us__item about-us__item--handmade">Связано вручную с любовью и умилением</li>
+          <li class="about-us__item about-us__item--homeland">Поддержка отечественного производителя</li>
+          <li class="about-us__item about-us__item--giftwrap">Поставляется в подарочной упаковке</li>
+        </ul>
+      </section>
+
+      <section class="opinions">
+        <h2 class="opinions__title">Отзывы</h2>
+        <div class="opinions__list">
+          <blockquote class="opinions__item">
+            <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+            <cite class="opinions__author-name"></cite>
+            <cite class="opinions__author-email"></cite>
+            <div class="opinions__pagination">
+              <a class="opinions__pagination-left" href="#"></a>
+              <a class="opinions__pagination-right" href="#"></a>
+            </div>
+            <a class="btn" href="#">Написать</a>
+          </blockquote>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <h3 class="contacts__title"></h3>
+        <ul class="contacts__info">
+          <li class="contacts__item">e-mail:</li>
+          <li class="contacts__data contacts__data--email">info@mimimishkashop.ru</li>
+        </ul>
+        <ul class="contacts__info">
+          <li class="contacts__item">адрес</li>
+          <li class="contacts__data">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</li>
+        </ul>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <div class="map__background"></div>
+          <a class="btn">Напишите нам</a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <section class="social">
+        <a class="social__item social__item--inst" href="#">Instagram</a>
+        <a class="social__item social__item--fb" href="#">Facebook</a>
+        <a class="social__item social__item--twit" href="#">Twitter</a>
+        <a class="social__designed" href="#">Разработано</a>
+      </section>
+    </footer>
 
   </body>
 </html>
