--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
+    <title>Мишка: Главная страница</title>
   </head>
   <body>
     <header class="page-header">
@@ -14,7 +14,7 @@
         <div class="main-nav_wrapper">
           <ul class="main-nav__list upper-list">
             <li class="upper-list__item">
-              <a href="#">Каталог товаров</a>
+              <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="upper-list__item">
               <a href="#">Вязание на заказ</a>
@@ -64,7 +64,7 @@
         <h2 class="product-week__subtitle">Вязаные корзинки</h2>
         <h3 class="product-week__title">Товар недели</h3>
         <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-        <div class="product-week__spec">
+        <div class="product-week__specs">
           <ul class="product-week__spec1">
             <li>Цвет:</li>
             <li>«Тиффани»/серый</li>
@@ -135,7 +135,7 @@
         <a class="social__item social__item--inst" href="#">Instagram</a>
         <a class="social__item social__item--fb" href="#">Facebook</a>
         <a class="social__item social__item--twit" href="#">Twitter</a>
-        <a class="social__designed" href="#">Разработано</a>
+        <a class="social__designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
       </section>
     </footer>
 
