--- a/source/form.html
+++ b/source/form.html
@@ -40,3 +40,99 @@
         </div>
       </nav>
     </header>
+
+    <main class="page-main">
+      <h1 class="page-main__title">Вязание на заказ</h1>
+      <p class="page-main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+      <form class="filter" action="form.php" method="GET">
+        <fieldset class="filter__type">
+          <legend>Тип</legend>
+          <div class="filter__input-lable">
+            <input type="radio" name=type value="interior" id="interior-type" checked>
+            <label for="interior-type">Аксессуар для интерьера</label>
+          </div>
+          <div class="filter__input-lable">
+            <input type="radio" name=type value="toy" id="toy-type">
+            <label for="toy-type">Детская игрушка</label>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__color">
+          <legend>Цвет</legend>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="w-clr" id="white-color" checked>
+            <label for="white-color">Белый</label>
+          </div>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="g-clr" id="grey-color" checked>
+            <label for="grey-color">Серый</label>
+          </div>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="tiff-clr" id="tiffany-color">
+            <label for="tiffany-color">«Тиффани»</label>
+          </div>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="bl-clr" id="black-color">
+            <label for="black-color">Черный</label>
+          </div>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="pnk-clr" id="pink-color">
+            <label for="pink-color">Розовый</label>
+          </div>
+          <div class="filter__input_lable">
+            <input type="checkbox" name="or-clr" id="orange-color">
+            <label for="orange-color">Оранжевый</label>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__fio">
+          <legend>ФИО</legend>
+          <div class="filter__write-name">
+            <label for="write-name">Имя:</label>
+            <input type="text" name="name" id="write-name" placeholder="Введите ваше имя*" required>
+          </div>
+          <div class="filter__write-last-name">
+            <label for="write-last-name">Фамилия:</label>
+            <input type="text" name="last-name" id="write_last-name" placeholder="Укаджите фамилию*" required>
+          </div>
+          <div class="filter__write-patronymic">
+            <label for="write-patronymic">Отчество:</label>
+            <input type="text" name="patronymic" id="write-patronymic" placeholder="Отчество, если желаете">
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__phone">
+          <legend>Тел</legend>
+          <div class="filter__write-phone">
+            <input type="text" name="phone" id="write-phone" placeholder="+7 XXX XX XX*" required>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__email">
+          <legend>E-mail</legend>
+          <div class="filter__write-email">
+            <input type="email" name="email" id="write-email" placeholder="Ваш Email*" required>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__additional">
+          <legend>Доп</legend>
+          <div class="filter__write-add-info">
+            <textarea rows="10" cols="32" name="add-info" id="write-add-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </div>
+        </fieldset>
+        <p class="filter__note">*Поля обязательны для заполнения</p>
+        <a class="btn" href="#">Отправить заказ</a>
+      </form>
+    </main>
+
+    <footer class="page-footer">
+      <section class="social">
+        <a class="social__item social__item--inst" href="#">Instagram</a>
+        <a class="social__item social__item--fb" href="#">Facebook</a>
+        <a class="social__item social__item--twit" href="#">Twitter</a>
+        <a class="social__designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+      </section>
+    </footer>
+  </body>
+</html>
