--- a/source/index.html
+++ b/source/index.html
@@ -139,5 +139,27 @@
       </section>
     </footer>
 
+    <div class="modal">
+      <span class="modal__title">Добавить в корзину</span>
+      <span class="modal__sub-title">Выберите размер:</span>
+      <div class="modal__input">
+        <ul class="modal__sizes">
+          <li class="modal__size-item modal__size-item--s">
+            <input type="radio" name=size value="s" id="size-s" checked>
+            <label for="size-s">S</label>
+          </li>
+          <li class="modal__size-item modal__size-item--m">
+            <input type="radio" name=size value="m" id="size-m">
+            <label for="size-m">M</label>
+          </li>
+          <li class="modal__size-item modal__size-item--l">
+            <input type="radio" name=size value="l" id="size-l">
+            <label for="size-l">L</label>
+          </li>
+        </ul>
+      </div>
+      <button class="btn btn--green" type="submit">Добавить</button>
+    </div>
+
   </body>
 </html>
