Внес правки в названия классов кнопок

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <p class="work-process__text">По просьбам наших любимых фолловеров, мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="btn" href="#">Сделать заказ</a>
+        <a class="work-process__make-order btn" href="#">Сделать заказ</a>
       </section>
     </main>
 
@@ -121,7 +121,7 @@
           </li>
         </ul>
       </div>
-      <button class="btn btn--green" type="submit">Добавить</button>
+      <button class="modal__add btn-green" type="submit">Добавить</button>
     </div>
 
   </body>
