--- a/source/form.html
+++ b/source/form.html
@@ -122,7 +122,7 @@
           </div>
         </fieldset>
         <p class="filter__note">*Поля обязательны для заполнения</p>
-        <a class="btn" href="#">Отправить заказ</a>
+        <a class="filter__sent-order btn" href="#">Отправить заказ</a>
       </form>
     </main>
 
