--- a/source/index.html
+++ b/source/index.html
@@ -77,12 +77,12 @@
             <li>Высота:</li>
             <li>15 см</li>
           </ul>
-          <div class="product-week_img">
+          <div class="product-week__img">
             <img src="#" alt="Вязаные корзинки" width="260" height="315">
           </div>
           <span class="product-week__price">Цена: 990 руб</span>
         </div>
-        <a class="btn" href="#">Заказать</a>
+        <a class="product-week__order btn" href="#">Заказать</a>
       </section>
       <section class="about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
@@ -107,7 +107,7 @@
               <a class="opinions__pagination-left" href="#"></a>
               <a class="opinions__pagination-right" href="#"></a>
             </div>
-            <a class="btn" href="#">Написать</a>
+            <a class="opinions__write btn" href="#">Написать</a>
           </blockquote>
         </div>
       </section>
@@ -122,10 +122,10 @@
           <li class="contacts__item">адрес</li>
           <li class="contacts__data">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</li>
         </ul>
-        <div class="map">
+        <div class="contacts__map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
           <div class="map__background"></div>
-          <a class="btn">Напишите нам</a>
+          <a class="contacts__write-us btn">Напишите нам</a>
         </div>
       </section>
     </main>
@@ -158,7 +158,7 @@
           </li>
         </ul>
       </div>
-      <button class="btn btn--green" type="submit">Добавить</button>
+      <button class="modal__add btn-green" type="submit">Добавить</button>
     </div>
 
   </body>
