Исправил ошибки после проверки на валидаторе

--- a/source/form.html
+++ b/source/form.html
@@ -93,7 +93,7 @@
           </div>
           <div class="filter__write-last-name">
             <label for="write-last-name">Фамилия:</label>
-            <input type="text" name="last-name" id="write_last-name" placeholder="Укаджите фамилию*" required>
+            <input type="text" name="last-name" id="write-last-name" placeholder="Укажите фамилию*" required>
           </div>
           <div class="filter__write-patronymic">
             <label for="write-patronymic">Отчество:</label>
