--- a/source/index.html
+++ b/source/index.html
@@ -45,17 +45,11 @@
       <section class="good-sorts">
         <h1 class="good-sorts__headline">Милые штуки ручной работы для дома</h1>
         <ul class="good-sorts__list">
-          <li class="good-sorts__item good-sorts__item--light">
+          <li class="good-sorts__item good-sorts__item--interior">
             <a href="#">Предметы интерьера</a>
-            <div class="good-sorts__item-icon good-sorts__item-icon--interior">
-              <img src="#" width="40" height="62">
-            </div>
           </li>
-          <li class="good-sorts__item good-sorts__item--dark">
+          <li class="good-sorts__item good-sorts__item--toys">
             <a href="#">Детские игрушки</a>
-            <div class="good-sorts__item-icon good-sorts__item-icon--toys">
-              <img src="#" width="60" height="60">
-            </div>
           </li>
         </ul>
       </section>
@@ -113,7 +107,7 @@
       </section>
 
       <section class="contacts">
-        <h3 class="contacts__title"></h3>
+        <h3 class="contacts__title">Контакты</h3>
         <ul class="contacts__info">
           <li class="contacts__item">e-mail:</li>
           <li class="contacts__data contacts__data--email">info@mimimishkashop.ru</li>
