--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,7 +82,7 @@
         <span class="work-process__title">Процесс производства</span>
         <div class="work-process__img-video">
           <div class="work-process__img">
-           <img src="#" width="260" height="150">
+           <img src="#" width="260" height="150" alt="Процесс производства">
           </div>
           <div class="work-process__video">
             <video src="#"></video>
