Настроил кнопки на отправку данных

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <p class="work-process__text">По просьбам наших любимых фолловеров, мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="work-process__make-order btn" href="#">Сделать заказ</a>
+        <a class="work-process__make-order btn" href="form.html">Сделать заказ</a>
       </section>
     </main>
 
@@ -105,7 +105,7 @@
     <div class="modal">
       <span class="modal__title">Добавить в корзину</span>
       <span class="modal__sub-title">Выберите размер:</span>
-      <div class="modal__input">
+      <form class="modal__input">
         <ul class="modal__sizes">
           <li class="modal__size-item modal__size-item--s">
             <input type="radio" name=size value="s" id="size-s" checked>
@@ -120,8 +120,8 @@
             <label for="size-l">L</label>
           </li>
         </ul>
-      </div>
-      <button class="modal__add btn-green" type="submit">Добавить</button>
+        <button class="modal__add btn-green" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru" formtarget="_blank">Добавить</button>
+      </form>
     </div>
 
   </body>
