--- a/source/form.html
+++ b/source/form.html
@@ -122,7 +122,7 @@
           </div>
         </fieldset>
         <p class="filter__note">*Поля обязательны для заполнения</p>
-        <a class="filter__sent-order btn" href="#">Отправить заказ</a>
+        <button class="filter__sent-order btn" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru" formtarget="_blank">Отправить заказ</button>
       </form>
     </main>
 
