--- a/source/form.html
+++ b/source/form.html
@@ -6,119 +6,119 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="#" width="86" height="35" alt="Мишка">
-      </a>
+      <div class="logo">
+        <a class="logo__link"  href="index.html">
+          <img class="logo__img" src="#" width="86" height="35" alt="Мишка">
+        </a>
+      </div>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav_wrapper">
-          <ul class="main-nav__list upper-list">
-            <li class="upper-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+          <ul class="main-nav__list main-nav__list--upper">
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Вязание на заказ</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Вязание на заказ</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Поиск по сайту</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Поиск по сайту</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Корзина</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Корзина</a>
             </li>
           </ul>
-          <ul class="main-nav__list lower-list">
-            <li class="lower-list__item">
-              <a href="#">Новые поступления</a>
+          <ul class="main-nav__list main-nav__list--lower">
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Новые поступления</a>
             </li>
-            <li class="lower-list__item">
-              <a href="#">Распродажа</a>
-            </li>
-            <li class="lower-list__item">
-              <a href="#">Бесплатная доставка по России</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Распродажа</a>
             </li>
           </ul>
         </div>
       </nav>
+      <span class="page-header__add-info">Бесплатная доставка по России</span>
     </header>
 
     <main class="page-main">
       <h1 class="page-main__title">Вязание на заказ</h1>
-      <p class="page-main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="filter" action="form.php" method="GET">
-        <fieldset class="filter__type">
-          <legend>Тип</legend>
-          <div class="filter__input-lable">
-            <input type="radio" name=type value="interior" id="interior-type" checked>
-            <label for="interior-type">Аксессуар для интерьера</label>
+        <p class="filter__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">Тип</legend>
+          <div class="filter__input-wrapper">
+            <input class="filter_radio"  type="radio" name=type value="interior" id="interior-type" checked>
+            <label class="filter_label"  for="interior-type">Аксессуар для интерьера</label>
           </div>
-          <div class="filter__input-lable">
-            <input type="radio" name=type value="toy" id="toy-type">
-            <label for="toy-type">Детская игрушка</label>
-          </div>
-        </fieldset>
-
-        <fieldset class="filter__color">
-          <legend>Цвет</legend>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="w-clr" id="white-color" checked>
-            <label for="white-color">Белый</label>
-          </div>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="g-clr" id="grey-color" checked>
-            <label for="grey-color">Серый</label>
-          </div>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="tiff-clr" id="tiffany-color">
-            <label for="tiffany-color">«Тиффани»</label>
-          </div>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="bl-clr" id="black-color">
-            <label for="black-color">Черный</label>
-          </div>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="pnk-clr" id="pink-color">
-            <label for="pink-color">Розовый</label>
-          </div>
-          <div class="filter__input_lable">
-            <input type="checkbox" name="or-clr" id="orange-color">
-            <label for="orange-color">Оранжевый</label>
+          <div class="filter__input-wrapper">
+            <input class="filter_radio"  type="radio" name=type value="toy" id="toy-type">
+            <label class="filter_label"  for="toy-type">Детская игрушка</label>
           </div>
         </fieldset>
 
-        <fieldset class="filter__fio">
-          <legend>ФИО</legend>
-          <div class="filter__write-name">
-            <label for="write-name">Имя:</label>
-            <input type="text" name="name" id="write-name" placeholder="Введите ваше имя*" required>
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">Цвет</legend>
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="w-clr" id="white-color" checked>
+            <label class="filter_label"  for="white-color">Белый</label>
           </div>
-          <div class="filter__write-last-name">
-            <label for="write-last-name">Фамилия:</label>
-            <input type="text" name="last-name" id="write-last-name" placeholder="Укажите фамилию*" required>
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="g-clr" id="grey-color" checked>
+            <label class="filter_label"  for="grey-color">Серый</label>
           </div>
-          <div class="filter__write-patronymic">
-            <label for="write-patronymic">Отчество:</label>
-            <input type="text" name="patronymic" id="write-patronymic" placeholder="Отчество, если желаете">
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="tiff-clr" id="tiffany-color">
+            <label class="filter_label"  for="tiffany-color">«Тиффани»</label>
           </div>
-        </fieldset>
-
-        <fieldset class="filter__phone">
-          <legend>Тел</legend>
-          <div class="filter__write-phone">
-            <input type="text" name="phone" id="write-phone" placeholder="+7 XXX XX XX*" required>
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="bl-clr" id="black-color">
+            <label class="filter_label"  for="black-color">Черный</label>
           </div>
-        </fieldset>
-
-        <fieldset class="filter__email">
-          <legend>E-mail</legend>
-          <div class="filter__write-email">
-            <input type="email" name="email" id="write-email" placeholder="Ваш Email*" required>
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="pnk-clr" id="pink-color">
+            <label class="filter_label"  for="pink-color">Розовый</label>
+          </div>
+          <div class="filter__input-wrapper">
+            <input class="filter_checkbox"  type="checkbox" name="or-clr" id="orange-color">
+            <label class="filter_label"  for="orange-color">Оранжевый</label>
           </div>
         </fieldset>
 
-        <fieldset class="filter__additional">
-          <legend>Доп</legend>
-          <div class="filter__write-add-info">
-            <textarea rows="10" cols="32" name="add-info" id="write-add-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">ФИО</legend>
+          <div class="filter__customer">
+            <label class="filter_label"  for="write-name">Имя:</label>
+            <input class="filter_text"  type="text" name="name" id="write-name" placeholder="Введите ваше имя*" required>
+          </div>
+          <div class="filter__customer">
+            <label class="filter_label"  for="write-last-name">Фамилия:</label>
+            <input class="filter_text"  type="text" name="last-name" id="write-last-name" placeholder="Укажите фамилию*" required>
+          </div>
+          <div class="filter__customer">
+            <label class="filter_label"  for="write-patronymic">Отчество:</label>
+            <input class="filter_text"  type="text" name="patronymic" id="write-patronymic" placeholder="Отчество, если желаете">
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">Тел</legend>
+          <div class="filter__contacts">
+            <input class="filter_text"  type="text" name="phone" id="write-phone" placeholder="+7 XXX XX XX*" required>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">E-mail</legend>
+          <div class="filter__contacts">
+            <input class="filter_text"  type="email" name="email" id="write-email" placeholder="Ваш Email*" required>
+          </div>
+        </fieldset>
+
+        <fieldset class="filter__fieldset">
+          <legend class="filter__legend">Доп</legend>
+          <div class="filter__add-info">
+            <textarea class="filter__textarea" rows="10" cols="32" name="add-info" id="write-add-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
         </fieldset>
         <p class="filter__note">*Поля обязательны для заполнения</p>
@@ -128,11 +128,13 @@
 
     <footer class="page-footer">
       <section class="social">
-        <a class="social__item social__item--inst" href="#">Instagram</a>
-        <a class="social__item social__item--fb" href="#">Facebook</a>
-        <a class="social__item social__item--twit" href="#">Twitter</a>
-        <a class="social__designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+        <ul class="social__list">
+          <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
+          <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
+          <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+        </ul>
       </section>
+      <a class="designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
     </footer>
   </body>
 </html>
