--- a/source/index.html
+++ b/source/index.html
@@ -6,77 +6,79 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="86" height="35" alt="Мишка">
-      </a>
+      <div class="logo">
+        <a class="logo__link">
+          <img class="logo__img" src="#" width="86" height="35" alt="Мишка">
+        </a>
+      </div>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav_wrapper">
-          <ul class="main-nav__list upper-list">
-            <li class="upper-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+          <ul class="main-nav__list main-nav__list--upper">
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Вязание на заказ</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Вязание на заказ</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Поиск по сайту</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Поиск по сайту</a>
             </li>
-            <li class="upper-list__item">
-              <a href="#">Корзина</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Корзина</a>
             </li>
           </ul>
-          <ul class="main-nav__list lower-list">
-            <li class="lower-list__item">
-              <a href="#">Новые поступления</a>
+          <ul class="main-nav__list main-nav__list--lower">
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Новые поступления</a>
             </li>
-            <li class="lower-list__item">
-              <a href="#">Распродажа</a>
-            </li>
-            <li class="lower-list__item">
-              <a href="#">Бесплатная доставка по России</a>
+            <li class="main-nav__item">
+              <a class="main-nav__name" href="#">Распродажа</a>
             </li>
           </ul>
         </div>
       </nav>
+      <span class="page-header__add-info">Бесплатная доставка по России</span>
     </header>
 
     <main class="page-main">
       <section class="good-sorts">
-        <h1 class="good-sorts__headline">Милые штуки ручной работы для дома</h1>
+        <h1 class="good-sorts__title">Милые штуки ручной работы для дома</h1>
         <ul class="good-sorts__list">
           <li class="good-sorts__item good-sorts__item--interior">
-            <a href="#">Предметы интерьера</a>
+            <a class ="good-sorts__name" href="#">Предметы интерьера</a>
           </li>
           <li class="good-sorts__item good-sorts__item--toys">
-            <a href="#">Детские игрушки</a>
+            <a class ="good-sorts__name" href="#">Детские игрушки</a>
           </li>
         </ul>
       </section>
 
-      <section class="product-week">
-        <h2 class="product-week__subtitle">Вязаные корзинки</h2>
-        <h3 class="product-week__title">Товар недели</h3>
-        <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-        <div class="product-week__specs">
-          <ul class="product-week__spec1">
-            <li>Цвет:</li>
-            <li>«Тиффани»/серый</li>
+      <section class="random-status-product">
+        <h2 class="random-status-product__name">Вязаные корзинки</h2>
+        <h3 class="random-status-product__status">Товар недели</h3>
+        <p class="random-status-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+        <div class="random-status-product__specs">
+          <ul class="random-status-product__spec-list">
+            <li class="random-status-product__spec-item">
+              <span class="random-status-product__spec-name"">Цвет:</span>
+              <span class="random-status-product__value">«Тиффани»/серый</span>
+            </li>
+            <li class="random-status-product__spec-item">
+              <span class="random-status-product__spec-name">Диаметр:</span>
+              <span class="random-status-product__value">25 см</span>
+            </li>
+            <li class="random-status-product__spec-item">
+              <span class="random-status-product__spec-name">Высота:</span>
+              <span class="random-status-product__spec-value">15 см</span>
+            </li>
           </ul>
-          <ul class="product-week__spec2">
-            <li>Диаметр:</li>
-            <li>25 см</li>
-          </ul>
-          <ul class="product-week__spec3">
-            <li>Высота:</li>
-            <li>15 см</li>
-          </ul>
-          <div class="product-week__img">
+          <div class="random-status-product__img">
             <img src="#" alt="Вязаные корзинки" width="260" height="315">
           </div>
-          <span class="product-week__price">Цена: 990 руб</span>
+          <span class="random-status-product__price">Цена: 990 руб</span>
         </div>
-        <a class="product-week__order btn" href="#">Заказать</a>
+        <a class="random-status-product__order btn" href="#">Заказать</a>
       </section>
       <section class="about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
@@ -92,18 +94,21 @@
 
       <section class="opinions">
         <h2 class="opinions__title">Отзывы</h2>
-        <div class="opinions__list">
-          <blockquote class="opinions__item">
-            <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-            <cite class="opinions__author-name"></cite>
-            <cite class="opinions__author-email"></cite>
-            <div class="opinions__pagination">
-              <a class="opinions__pagination-left" href="#"></a>
-              <a class="opinions__pagination-right" href="#"></a>
-            </div>
-            <a class="opinions__write btn" href="#">Написать</a>
-          </blockquote>
+        <ul class="opinions__list">
+          <li class="opinions__item">
+            Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+          </li>
+          <li class="opinions__item opinions__item--author-name">Анастасия Красильникова</li>
+          <li class="opinions__item">@misssssiskras</li>
+        </ul>
+        <div class="opinions__pagination opinions__slider">
+          <button class="opinions__prev-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Предыдущий отзыв</button>
+          <button class="opinions__next-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Следующий отзыв</button>
         </div>
+        <a class="opinions__write btn" href="#">Написать</a>
+
+
+
       </section>
 
       <section class="contacts">
@@ -111,14 +116,14 @@
         <ul class="contacts__info">
           <li class="contacts__item">e-mail:</li>
           <li class="contacts__data contacts__data--email">info@mimimishkashop.ru</li>
-        </ul>
-        <ul class="contacts__info">
           <li class="contacts__item">адрес</li>
           <li class="contacts__data">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</li>
         </ul>
-        <div class="contacts__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
-          <div class="map__background"></div>
+        <div class="contacts__maps">
+          <div class="contacts__map-item">
+            <img class="contacts__map-item" src="#" alt="Карта">
+            <iframe class="contacts__map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
           <a class="contacts__write-us btn">Напишите нам</a>
         </div>
       </section>
@@ -126,27 +131,29 @@
 
     <footer class="page-footer">
       <section class="social">
-        <a class="social__item social__item--inst" href="#">Instagram</a>
-        <a class="social__item social__item--fb" href="#">Facebook</a>
-        <a class="social__item social__item--twit" href="#">Twitter</a>
-        <a class="social__designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+        <ul class="social__list">
+          <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
+          <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
+          <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+        </ul>
       </section>
+      <a class="designed" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
     </footer>
 
     <div class="modal">
-      <span class="modal__title">Добавить в корзину</span>
-      <span class="modal__sub-title">Выберите размер:</span>
-      <form class="modal__input">
-        <ul class="modal__sizes">
-          <li class="modal__size-item modal__size-item--s">
+      <h1 class="modal__title">Добавить в корзину</h1>
+      <h2 class="modal__sub-title">Выберите размер:</h2>
+      <form class="modal__form">
+        <ul class="modal__list">
+          <li class="modal__size-item">
             <input type="radio" name=size value="s" id="size-s" checked>
             <label for="size-s">S</label>
           </li>
-          <li class="modal__size-item modal__size-item--m">
+          <li class="modal__size-item">
             <input type="radio" name=size value="m" id="size-m">
             <label for="size-m">M</label>
           </li>
-          <li class="modal__size-item modal__size-item--l">
+          <li class="modal__size-item">
             <input type="radio" name=size value="l" id="size-l">
             <label for="size-l">L</label>
           </li>
