Внес правки после проверки на валидаторе

--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
         <div class="random-status-product__specs">
           <ul class="random-status-product__spec-list">
             <li class="random-status-product__spec-item">
-              <span class="random-status-product__spec-name"">Цвет:</span>
+              <span class="random-status-product__spec-name">Цвет:</span>
               <span class="random-status-product__value">«Тиффани»/серый</span>
             </li>
             <li class="random-status-product__spec-item">
