Начал верстку с препроцессором

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,7 @@
         </a>
       </div>
       <nav class="main-nav">
+        <div class="container">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav_wrapper">
           <ul class="main-nav__list main-nav__list--upper">
@@ -44,7 +45,7 @@
 
     <main class="page-main">
       <section class="good-sorts">
-        <h1 class="good-sorts__title">Милые штуки ручной работы для дома</h1>
+        <h1 class="good-sorts__title">Милые штуки ручной<br>работы для дома</h1>
         <ul class="good-sorts__list">
           <li class="good-sorts__item good-sorts__item--interior">
             <a class ="good-sorts__name" href="#">Предметы интерьера</a>
