--- a/source/index.html
+++ b/source/index.html
@@ -2,18 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Мишка: Главная страница</title>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <div class="logo">
         <a class="logo__link">
           <img class="logo__img" src="#" width="86" height="35" alt="Мишка">
         </a>
       </div>
       <nav class="main-nav">
-        <div class="container">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav_wrapper">
           <ul class="main-nav__list main-nav__list--upper">
@@ -27,7 +27,7 @@
               <a class="main-nav__name" href="#">Поиск по сайту</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__name" href="#">Корзина</a>
+              <a class="main-nav__name" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
           <ul class="main-nav__list main-nav__list--lower">
@@ -40,12 +40,12 @@
           </ul>
         </div>
       </nav>
-      <span class="page-header__add-info">Бесплатная доставка по России</span>
+      <p class="page-header__add-info">Бесплатная доставка по России</p>
     </header>
 
-    <main class="page-main">
+    <main class="page-main container">
       <section class="good-sorts">
-        <h1 class="good-sorts__title">Милые штуки ручной<br>работы для дома</h1>
+        <h1 class="good-sorts__title">Милые штуки ручной<p class="paragraph">работы для дома</p></h1>
         <ul class="good-sorts__list">
           <li class="good-sorts__item good-sorts__item--interior">
             <a class ="good-sorts__name" href="#">Предметы интерьера</a>
@@ -85,7 +85,7 @@
       <section class="about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
         <ul class="about-us__list">
-          <li class="about-us__item about-us__item--eco">Экологически чистые материалы</li>
+          <li class="about-us__item about-us__item--eco">Экологически<p class="paragraph">чистые материалы</p></li>
           <li class="about-us__item about-us__item--price">Скандинавский стиль по российской цене</li>
           <li class="about-us__item about-us__item--like"> Увеличивает лайки на фотографиях</li>
           <li class="about-us__item about-us__item--handmade">Связано вручную с любовью и умилением</li>
@@ -132,7 +132,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer container">
       <section class="social">
         <ul class="social__list">
           <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
